--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Machi Coro 2.0</title>
 </head>
 <body>
-    
+    <!-- <script src="js/Card.js"></script>
+    <script src="js/Player.js"></script> -->
+    <script src="js/functions.js"></script>
+    <script src="js/Cube.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
